# RAG-Gemini-Reranker

./: README.md  doc.md  main.ipynb  pyproject.toml
.ipynb_checkpoints/: main-checkpoint.ipynb
