[project]
name = "rag"
version = "1.0.0"
description = "basic RAG"
authors = [
    {name = "falltwo", email = "gjui890@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.4.0",
    "google-genai>=1.56.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.0",
    "ipykernel>=6.29.0",
    "notebook>=7.0.0",
]
